added newsletter action

--- a/index.html
+++ b/index.html
@@ -90,10 +90,19 @@
     </main>
 
     <footer class="footer">
-        <a>Designed by Kate Kim</a>
         <p>&copy; 2024 Toronto Cupcakes</p>
-        <a href= "https://torontocupcake.com/index.html">Redesign for Toronto Cupcake website</a>
-</footer>
+        <p>Designed by Kate Kim</p>
+        <p>Redesign for Toronto Cupcake website</p>
+        <div class="newsletter-signup">
+            <p>Sign up for sweet deals and updates on our latest flavors!</p>
+            <form action="your-signup-form-url" method="post">
+                <input type="email" placeholder="Enter your email" required>
+                <button type="submit" class="round-button">Subscribe</button>
+            </form>
+        </div>
+        <a href="https://torontocupcake.com/index.html">Visit the Original Toronto Cupcake website</a>
+    </footer>
+    
 </body>
 </html>
 
