With added paragraph under cupcake

--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
                     <img src="images/pinkcupcakes.jpeg" alt="Strawberry Cupcake" width="100">
                     <p>Champaine Cupcake</p>
                 </div>
+            <p>Toronto Cupcake would love to help make your special occasion one to remember.
+                Wedding and Engagement - we have over 1500 different combinations with our standard offerings but if you want something special we would love to make it happen. We have many different sized and shaped cupcake stands available for your use or we can design and make one just for you.
+                Birthdays/Anniversaries - Themed birthdays or anniversaries are all the rage. From Cookie Monster to The Bachelorette we have done them all.</p>
             </div>
         </section>
         
