--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         </section>
         <section id="about">
             <h2>About Us</h2>
+            <img src="https://cdn.tasteatlas.com/Images/Dishes/3021765eda914b4cb253e72f5565a101.jpg" alt="about Cupcake" width="100">
             <p>Toronto Cupcake was created by Michelle Harrison so she could pursue her love of baking. A lifelong baker, inspired by her mother, Michelle opened Toronto Cupcake in August 2010 as one of Canada's first gourmet cupcakeries. We are driven by loving what we do and what we make everyday. We get to use the finest ingredients to make what we believe are the tastiest treats around. And.. we love the idea that our treats are making people happy.</p>
         </section>
         <section id="cupcakes">
